--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 
 *{
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 .main-login{
@@ -130,6 +129,9 @@ body{
 }
 
 @media (max-width: 768px){
+    *{
+        overflow-x: hidden;
+    }
     .main-login{
         flex-direction: column-reverse;
         width: 100%;
@@ -159,6 +161,10 @@ body{
 
 
 @media (max-width: 420px){
+    *{
+        overflow-x: hidden;
+
+    }
     .left-login{
         width: 90%;
         height: 100% ;
